--- a/templates/static/geral/css/base.css
+++ b/templates/static/geral/css/base.css
@@ -21,9 +21,18 @@ body{
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
     margin-bottom: 1%;
 }
+.texto{
+    font-family: 'Great Vibes', cursive;
+    text-align: center;
+    color: #fff;
+}
 .form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column; /* Garante que os elementos estejam empilhados verticalmente */
+    gap: 10px; /* Define o espaçamento entre os elementos filhos */
     width: 350px;
-    margin: 0;
+    margin: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 10px;
@@ -39,7 +48,6 @@ body{
     border: none;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     width: 100%;
-    margin-bottom: 10px;
 }
 .form .botoes {
     display: flex;
@@ -72,4 +80,12 @@ footer {
 p{
     margin-top: 0;
     margin-bottom: 0;
+}
+.link{
+    color: rgb(255, 0, 0);
+}
+.alert {
+    padding: 10px;
+    margin: 0px 0;
+    border: 1px solid;
 }
