--- a/usuarios/templates/logar.html
+++ b/usuarios/templates/logar.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block 'conteudo' %}
     <div class="container">
-        <p class="slogan">A plataforma do seu pet espera por você</p>
+        <p class="slogan">A MyPet espera por você</p>
         {% if messages %}
             {% for message in messages %}
                 <section class="alert {{message.tags}}">
