--- a/usuarios/templates/cadastrar.html
+++ b/usuarios/templates/cadastrar.html
@@ -2,8 +2,16 @@
 {% block 'cabecalho' %} <link rel="stylesheet" href="{% static 'usuarios/css/cadastrar.css'%}"> {% endblock %}
 
 {% block 'conteudo' %}
+    <menu class="menu">
+        <button onclick="window.location.href = '{% url "/" %}'">Usuario</button>
+        <button onclick="window.location.href = '{% url "/" %}'">Tutor</button>
+        <button onclick="window.location.href = '{% url "/" %}'">Pet</button>
+        <button onclick="window.location.href = '{% url "/" %}'">Feed</button>
+        <button onclick="window.location.href = '{% url "/" %}'">Sair</button>
+    </menu>
+    <p class="user">User: {{usuario}}</p>
     <div class="container">
-        <p class="slogan">Perfil de Usuário: {{usuario}}</p>
+        <h3 class="texto">Perfil de Usuário</h3>
         <h2 class='texto'>Registre e anote sua senha para acessar a plataforma</h2>
         <form class="form" action="{% url 'realizar_cadastro' %}" method="POST">{% csrf_token %}
             {% if messages %}
