--- a/templates/static/geral/css/base.css
+++ b/templates/static/geral/css/base.css
@@ -11,12 +11,15 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
+    border: 1px solid #ccc;
+    border-radius: 5px;
     padding-left: 0;
     margin: 0;
 }
 .menu button {
     transition: background-color 0.3s ease;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     font-weight: bold;
     background: none;
     border: none;
@@ -24,17 +27,19 @@ body{
     color: white;
 }
 .menu button:hover{
-    color: #00a8f3;
+    color: red;
     transition: 0.2s;
+    border: 1px solid red;
+    border-radius: 5px;
 }
 .user{
-    justify-content: center;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    text-align: center;
+    font-family: 'Great Vibes', cursive;
+    color: #fff;
 }
 .container {
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column; /* alinha os elementos em coluna */
     align-items: center; /* centraliza os elementos */
@@ -48,10 +53,12 @@ body{
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
     margin-bottom: 1%;
 }
-.texto{
+.texto {
     font-family: 'Great Vibes', cursive;
     text-align: center;
     color: #fff;
+    -webkit-text-stroke-width: 1.5px; /* Largura da borda */
+    -webkit-text-stroke-color: black; /* Cor da borda */
 }
 .form {
     display: flex;
