--- a/perfil/templates/tutor.html
+++ b/perfil/templates/tutor.html
@@ -1,16 +1,12 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'perfil/css/tutor.css'%}">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-{% endblock %}
+{% extends 'base.html' %}{% load static %}
+{% block 'cabecalho' %} <link rel="stylesheet" href="{% static 'perfil/css/tutor.css'%}"> {% endblock %}
+<!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet' -->
 {% block 'conteudo' %}
-    <body class='body'>
-        <div class="container">
-            <h3 class="titulo">Perfil de Tutor(a)</h3>
-            <h3 class="slogan">{{request.user}}</h3>
-            <h2 class='texto'>Para que você tenha a melhor experiência possivel<br>
-                Mantenha sempre seus dados atualizados</h2>
+    <div class="container">
+        <h3 class="slogan">Perfil de Tutor</h3>
+        <h2 class='texto'>Para que você tenha a melhor experiência possivel<br>
+            Mantenha sempre seus dados atualizados</h2>
+        <form class="form" action="{% url 'tutor' %}" method="POST">{% csrf_token %}
             {% if messages %}
                 {% for message in messages %}
                     <section class="alert {{message.tags}}">
@@ -18,19 +14,13 @@
                     </section>
                 {% endfor %}
             {% endif %}
-            <form class="texto" action="{% url 'tutor' %}" method="POST">{% csrf_token %}
-                <h2 class='texto'>Nome Completo do(a) Tutor(a)</h2>
-                <input class="texto" type="texto" name="tutor" id="" placeholder="Nome Completo" value="{{ tutor.tutor }}" required autofocus>
-                <h2 class='texto'>Celular WhatsApp</h2>
-                <input class="texto" type="tel" name="celular" id="" placeholder="(12)12345-1234" maxlength="11" pattern="[0-9]{1,11}" value="{{tutor.celular}}" required>
-                <h2 class='texto'>Cep</h2>
-                <input class="texto" type="tel" name="cep" id="" placeholder="12.123-123" maxlength="8" pattern="[0-9]{1,8}" value="{{tutor.cep}}" required>
-                <h2 class='texto'>{{endereco.bairro|safe}} - {{endereco.localidade|safe}} - {{endereco.uf|safe}}</h2>
-                <div class="botoes-container">
-                    <input class="botao" type="button" onclick="window.location.href = '{% url "logout" %}'" value="Sair">
-                    <input class="botao" type="submit" value="Registrar">
-                </div>
-            </form>
-        </div>
-    </body>
+            <input class="input" type="texto" name="tutor" placeholder="Nome Completo" value="{{ tutor.tutor }}" required autofocus>
+            <input class="input" type="tel" name="celular" id="" placeholder="Cel: (12)12345-1234" maxlength="11" pattern="[0-9]{1,11}" value="{{tutor.celular}}" required>
+            <input class="input" type="tel" name="cep" id="" placeholder="Cep: 12.123-123" maxlength="8" pattern="[0-9]{1,8}" value="{{tutor.cep}}" required>
+            <h2 class='texto'>{{endereco.bairro|safe}} - {{endereco.localidade|safe}} - {{endereco.uf|safe}}</h2>
+            <div class="botoes">
+                <input class="botao" type="submit" value="Confirmar">
+            </div>
+        </form>
+    </div>
 {% endblock 'conteudo' %}
