--- a/templates/static/perfil/css/pet.css
+++ b/templates/static/perfil/css/pet.css
@@ -1,86 +1,17 @@
-header{
-    border-color: rgb(255 255 255);
-    border-style: solid;
-    border-width: 1px;
-    height: 34px;
-}
-#logoMenu {
-    height: 100%;
-    width: 35px;
-}
-.menu{
-    font-size: 17px;
-    transition: 0.2s;
-    display: flex;
-    justify-content: space-between;
-}
-.menu button{
-    display: inline;
-    font-size:smaller;
-    font-weight: bold;
-    background-color:transparent;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    transition: background-color 0.3s ease;
-    width: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-.menu button p{
-    display: inline-block;
-    padding: 2px 10px;
-    color: gray;
-    text-decoration: nome;
-    padding-left: 10px;
-}
-.menu button p:hover{
-    color: rgb(255 255 255);
-    transition: 0.2s;
-}
-footer {
-    background-color: #333; /* Cor de fundo do footer */
-    color: white; /* Cor do texto no footer */
-    text-align: center; /* Alinhamento centralizado do texto */
-    width: 100%; /* Largura total */
-    bottom: 0; /* Alinha o footer na parte inferior da janela */
-}
-
-
-
-.texto{
-    margin-bottom: 10px;
-}
-.botoes-container {
-    padding-top: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-.botao {
-    background-color: #00a8f3;
-    color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    transition: background-color 0.3s ease;
-    width: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-.botao:hover {
-    /* Define a cor de fundo do botão quando o mouse passar por cima */
-    background-color: #00709b;
-}
 body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    background-image: url("/static/perfil/img/pet.svg");
 }
 .container {
-    background-image: url("/static/perfil/img/pet.svg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain; /* Ajusta a imagem para caber dentro do container */
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    flex: 1;
+    margin-top: 0px;
+}
+.pedigre{
+    display: flex;
+    justify-content: center;
+}
+.pedigre .check{
+    height: 35px;
+    width: 35px;
+    transform: scale(1);
+    margin-left: 10px;
 }
