--- a/templates/static/usuarios/css/termos.css
+++ b/templates/static/usuarios/css/termos.css
@@ -10,8 +10,9 @@ body{
     justify-content: center;
 }
 .checkbox .check{
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
     transform: scale(1);
     margin-left: 10px;
+    align-items: center;
 }
